--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,40 @@ footer{
     margin: auto;
     text-align: center;
 }
+
+input{
+    background-color: white;
+    text-align: center;
+    align-items: center;
+    width: inherit;
+    margin: auto;
+    border-radius: 0.5em;
+    color: purple;
+    width: fit-content;
+    margin: 1em;
+}
+
+.output-div{
+    color: blue;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+
+}
+
+
+
+button{
+    background-color: orange;
+    text-align: center;
+    align-items: center;
+    width: fit-content;
+    margin: auto;
+    border-radius: 0.5em;
+    color: purple;
+    padding: 1em;
+    font-weight: bold;
+    font-size: 1rem;
+    margin-top: 3em;
+    cursor: pointer;
+}
