style:div-container width, padding

--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,12 @@ body{
     background-color: orange;
     text-align: center;
     align-items: center;
-    width: inherit;
+    width: 60%;
     margin: auto;
     border-radius: 0.5em;
     color: purple;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 
 }
 
